# master-baiter

./: .gitignore  .gitmodules  BENCHMARK.md  DEMO.md  Dockerfile  README.md  baiter-run.sh
bridge_odas_ai/: package.xml  setup.cfg  setup.py
bridge_odas_ai/bridge_odas_ai/: bridge.py
gazebo_shit/human/: model.config  model.sdf
gazebo_shit/human/meshes/: human.mtl
models/: README.md  finetune_model.py  infer.py  make_dataset.py  model_int8_edgetpu.tflite  model_pruned_50_int8.tflite  model_pruned_50_int8_edgetpu.tflite  model_pruned_70_int8_edgetpu.tflite  silence_segment.py  test_audio.py  train_yamnet.py  yamnet_finetuned_model.tflite
models/onnx_models/: model_full_int8.onnx  yamnet_finetuned_model.onnx
orchestrator/: CMakeLists.txt  README.md  package.xml
orchestrator/launch/: listeners.launch.py
orchestrator/src/: receive.cpp  soundgoal.cpp
respeaker/: Dockerfile  SETUP_RESPEAKER.md  configuration.cfg  ros_entrypoint.sh
scripts/: benchmark_models.py  benchmark_models_coral.py
scripts/old/: finetune_model.py  infer.py  make_dataset.py  quantize_prune_model.py  test_audio_coral.py  train_yamnet.py
speech_recognition/: package.xml  setup.py
speech_recognition/launch/: speech_recognition.launch.py
speech_recognition/speech_recognition/: speech_recognition_node.py
